--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-alarm-notification": "^1.8.0",
     "react-native-calendars": "^1.1280.0",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
