--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "next-pwa": "^5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-query": "^3.39.2",
     "recoil": "^0.7.4",
     "styled-components": "^5.3.5"
