--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","src", "src/custom.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","src/custom.d.ts"],
   "exclude": ["node_modules"]
 }
