--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fullcalendar/core": "^5.11.2",
-    "@fullcalendar/daygrid": "^5.11.2",
-    "@fullcalendar/interaction": "^5.11.2",
-    "@fullcalendar/list": "^5.11.2",
-    "@fullcalendar/react": "^5.11.2",
-    "@fullcalendar/resource-timeline": "^5.11.2",
-    "@fullcalendar/timegrid": "^5.11.2",
     "axios": "^0.27.2",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.2",
