--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-query": "^3.39.2",
-    "recoil": "^0.7.4",
+    "recharts": "2.1.12",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
