--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.4",
